ajustando o menu e mudando nome da empresa

--- a/FRONTEND/chat.html
+++ b/FRONTEND/chat.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AuditAI - Chat</title>
+    <title>IAudit Pharma - Chat</title>
     <link rel="stylesheet" href="chat-style.css">
 </head>
 <body>
     <header>
-        <div class="logo">AuditAI</div>
+        <div class="logo">IAudit Pharma</div>
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Serviços</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
