--- a/FRONTEND/home.html
+++ b/FRONTEND/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AuditAI Pharma</title>
+    <title>IAudit Pharma</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
         <a href="chat.html">Chat</a> <!-- Link para a página do chat -->
     </nav>
     <main>
-        <h1>Bem-vindo ao AuditAI Pharma</h1>
+        <h1>Bem-vindo ao IAudit Pharma</h1>
         <p>Uma IA para auditoria farmacêutica inteligente.</p>
     </main>
 </body>
