--- a/FRONTEND/index.html
+++ b/FRONTEND/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AuditAI Pharma - Início</title>
+    <title>IAudit Pharma - Início</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="logo">AuditAI</div>
+        <div class="logo">IAudit Pharma</div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#">Início</a></li>
                 <li><a href="#">Serviços</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
@@ -20,14 +20,14 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Bem-vindo à AuditAI</h1>
+            <h1>Bem-vindo à IAudit Pharma</h1>
             <p>Sua inteligência artificial especializada em auditoria farmacêutica.</p>
             <a href="chat.html" class="btn">Acessar Chat</a>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 AuditAI Pharma. Todos os direitos reservados.</p>
+        <p>&copy; 2025 IAudit Pharma. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
