--- a/FRONTEND/chat.html
+++ b/FRONTEND/chat.html
@@ -21,7 +21,10 @@
     <section class="chat-container">
         <div class="chat-box">
             <div class="messages" id="messages">
-                <div class="message bot">Olá! Como posso ajudar na auditoria farmacêutica?</div>
+                <div class="message bot">
+                    <div class="sender-name">Veronica</div>
+                    Olá! Como posso ajudar na auditoria farmacêutica?
+                </div>
             </div>
             <div class="input-area">
                 <input type="text" id="user-input" placeholder="Digite sua mensagem..." />
@@ -40,9 +43,12 @@
                 const userMessage = userInput.value.trim();
                 if (userMessage === "") return;
 
-                // Exibir a mensagem do usuário no chat
                 appendMessage("user", userMessage);
                 userInput.value = "";
+
+                // Mensagem temporária da Veronica
+                const processingMessage = appendMessage("bot", "Um instante, estou analisando a sua dúvida...");
+                processingMessage.classList.add("temporary");
 
                 try {
                     const response = await fetch("https://tats-ai.onrender.com/api/chat", {
@@ -54,6 +60,10 @@
                     });
 
                     const data = await response.json();
+                    // Remove a mensagem "Um instante..."
+                    const tempMsg = document.querySelector(".message.bot.temporary");
+                    if (tempMsg) tempMsg.remove();
+
                     if (data.reply) {
                         appendMessage("bot", data.reply);
                     } else {
@@ -61,6 +71,8 @@
                     }
                 } catch (error) {
                     console.error("Erro ao conectar ao servidor:", error);
+                    const tempMsg = document.querySelector(".message.bot.temporary");
+                    if (tempMsg) tempMsg.remove();
                     appendMessage("bot", "Erro ao conectar à IA.");
                 }
             }
@@ -68,9 +80,20 @@
             function appendMessage(role, text) {
                 const messageDiv = document.createElement("div");
                 messageDiv.classList.add("message", role);
-                messageDiv.textContent = text;
+
+                if (role === "bot") {
+                    const nameDiv = document.createElement("div");
+                    nameDiv.classList.add("sender-name");
+                    nameDiv.textContent = "Veronica";
+                    messageDiv.appendChild(nameDiv);
+                }
+
+                const textNode = document.createTextNode(text);
+                messageDiv.appendChild(textNode);
                 messagesContainer.appendChild(messageDiv);
-                messagesContainer.scrollTop = messagesContainer.scrollHeight; // Rolar para a última mensagem
+                messagesContainer.scrollTop = messagesContainer.scrollHeight;
+
+                return messageDiv; // retorna a div caso precise manipulá-la depois
             }
 
             sendButton.addEventListener("click", sendMessage);
